[package]
name = "chain-gateway"
version = "0.1.0"
edition = "2021"  # Correct edition
build = "build.rs"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.45.1", features = ["full"] }
solana-client = "2.2.7"
solana-sdk = "2.2.1"
thiserror = "2.0.12"
tracing = "0.1.41"
dotenv = "0.15.0"
serde_json = "1.0.140"
borsh = "1.5.7"

[build-dependencies]
tonic-build = "0.13.1"
